# hookfs

./: .gitignore  Cargo.toml  NOTICE  README.md
crates/hookfs/: Cargo.toml  README.md  build.rs
crates/hookfs/src/: dispatch.rs  error.rs  install.rs  lib.rs  mount.rs  namespace.rs  registry.rs  router.rs  vfs.rs
crates/hookfs/src/providers/: memory.rs  mod.rs  overlay.rs
crates/hookfs/src/shims/: mod.rs  unix.rs  windows.rs
crates/hookfs/src/shims/unix/: macos.rs  trampolines.rs
crates/hookfs/tests/: engine.rs  engine_ios.rs  engine_linux.rs
crates/hookfs/tests/fixtures/: fs_target.rs  fs_target_linux.rs
crates/plthook/: Cargo.toml  LICENSE-BSD-2-Clause  NOTICE  README.md  build.rs
crates/plthook/src/: dlpi.rs  elf.rs  error.rs  import.rs  lib.rs  macho.rs  module.rs  module_elf.rs  module_macho.rs  pe.rs  slot.rs  sys.rs  sys_macos.rs  sys_unix.rs  types.rs
crates/plthook/src/arch/: mod.rs
crates/plthook/tests/: braw_imports.rs  delay_import.rs  engine.rs  engine_ios.rs  engine_linux.rs
crates/plthook/tests/fixtures/: delay_target.rs  hook_target.rs
